--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= A gentle guide to asynchronous programming with Eclipse Vert.x for enterprise application developers
+= A gentle guide to asynchronous programming with Eclipse Vert.x for Java developers
 Julien Ponge <julien.ponge@insa-lyon.fr> ; Thomas Segismont <tsegismo@redhat.com> ; Julien Viet <jviet@redhat.com>
 :doctype: book
 
