--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,10 @@ Julien Ponge <julien.ponge@insa-lyon.fr> ; Thomas Segismont <tsegismo@redhat.com
 
 :leveloffset: +1
 
+ifdef::rendered-pdf-link[]
+NOTE: This document is also link:{rendered-pdf-link}[available as a PDF].
+endif::[]
+
 :imagesdir: intro
 include::intro/README.adoc[]
 
