--- a/step-1/README.adoc
+++ b/step-1/README.adoc
@@ -423,6 +423,6 @@ To run it we first need to build it with Maven:
 
 Since the build produces a Jar will all required dependencies embedded (including Vert.x and a JDBC database), running the wiki is as simple as:
 
-    $ java -jar target/wiki-step-1-1.0.1-SNAPSHOT-fat.jar
+    $ java -jar target/wiki-step-1-1.0.1-fat.jar
 
 You can then point your favorite web browser to http://localhost:8080/ and enjoy using the wiki.
