--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = A gentle guide to asynchronous programming with Eclipse Vert.x for Java developers
 Julien Ponge <julien.ponge@insa-lyon.fr> ; Thomas Segismont <tsegismo@redhat.com> ; Julien Viet <jviet@redhat.com>
-v1.0.2-SNAPSHOT, 2017-07-27
+v1.1.0-SNAPSHOT, 2017-xx-yy
 :doctype: book
 
 :leveloffset: +1
