--- a/README.adoc
+++ b/README.adoc
@@ -12,7 +12,7 @@ NOTE: This document is also link:{rendered-pdf-link}[available as a PDF].
 endif::[]
 
 .Acknowledgements
-This document has received contributions from Arnaud Esteve and Marc Paquette.
+This document has received contributions from Arnaud Esteve, Marc Paquette, Ashley Bye, Ger-Jan te Dorsthorst, Htet Aung Shine and others.
 
 :imagesdir: intro
 include::intro/README.adoc[]
